# Pivotalcoin-source-code

./: CONTRIBUTING.md  INSTALL.md  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libpivotalcoinconsensus.pc  libpivotalcoinconsensus.pc.in  libtool
doc/: README.md  (+30 more)
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.h  bech32.h  blockencodings.h  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  (+94 more)
src/.deps/: libpivotalcoin_common_a-base58.Po  libpivotalcoin_common_a-bech32.Po  libpivotalcoin_common_a-chainparams.Po  libpivotalcoin_common_a-coins.Po  libpivotalcoin_common_a-compressor.Po  libpivotalcoin_common_a-core_read.Po  libpivotalcoin_common_a-core_write.Po  libpivotalcoin_common_a-key.Po  libpivotalcoin_common_a-key_io.Po  libpivotalcoin_common_a-keystore.Po  libpivotalcoin_common_a-netaddress.Po  libpivotalcoin_common_a-netbase.Po  libpivotalcoin_common_a-protocol.Po  libpivotalcoin_common_a-scheduler.Po  libpivotalcoin_common_a-warnings.Po  libpivotalcoin_consensus_a-arith_uint256.Po  libpivotalcoin_consensus_a-hash.Po  libpivotalcoin_consensus_a-pubkey.Po  libpivotalcoin_consensus_a-uint256.Po  libpivotalcoin_consensus_a-utilstrencodings.Po  libpivotalcoin_server_a-addrdb.Po  libpivotalcoin_server_a-addrman.Po  libpivotalcoin_server_a-blockencodings.Po  libpivotalcoin_server_a-bloom.Po  libpivotalcoin_server_a-chain.Po  libpivotalcoin_server_a-checkpoints.Po  libpivotalcoin_server_a-dbwrapper.Po  libpivotalcoin_server_a-httprpc.Po  libpivotalcoin_server_a-httpserver.Po  libpivotalcoin_server_a-init.Po  libpivotalcoin_server_a-merkleblock.Po  libpivotalcoin_server_a-miner.Po  libpivotalcoin_server_a-net.Po  libpivotalcoin_server_a-net_processing.Po  libpivotalcoin_server_a-noui.Po  libpivotalcoin_server_a-outputtype.Po  libpivotalcoin_server_a-pow.Po  libpivotalcoin_server_a-rest.Po  libpivotalcoin_server_a-shutdown.Po  libpivotalcoin_server_a-timedata.Po  (+26 more)
src/bench/: .gitignore  bench.h  bench_pivotalcoin.cpp  ccoins_caching.cpp  coin_selection.cpp  verify_script.cpp
src/bench/data/: block413567.raw
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/compat/.deps/: libpivotalcoin_util_a-glibc_sanity.Po  libpivotalcoin_util_a-glibcxx_sanity.Po  libpivotalcoin_util_a-strnlen.Po
src/config/: pivotalcoin-config.h  pivotalcoin-config.h.in  stamp-h1
src/consensus/: consensus.h  merkle.h  params.h  tx_verify.h  validation.h
src/consensus/.deps/: libpivotalcoin_consensus_a-merkle.Po  libpivotalcoin_server_a-tx_verify.Po  libpivotalcoinconsensus_la-merkle.Plo
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha512.h
src/crypto/.deps/: crypto_libpivotalcoin_crypto_avx2_a-sha256_avx2.Po  crypto_libpivotalcoin_crypto_base_a-aes.Po  crypto_libpivotalcoin_crypto_base_a-chacha20.Po  (+18 more)
src/index/: base.h  txindex.h
src/interfaces/: README.md  handler.h  node.cpp  node.h  wallet.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  callback.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.h  paymentserver.cpp  (+54 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.h  server.cpp  server.h  util.h
src/script/: descriptor.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  pivotalcoinconsensus.cpp  pivotalcoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+30 more)
src/wallet/: coincontrol.h  coinselection.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.h  fees.cpp  fees.h  init.cpp  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletutil.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h
(+495 files in other folders)
